@@ -4,6 +4,8 @@ Changelog
 Head
 ~~~~
 
+- Added support for dynamic skip condition. [malthe]
+
 - Fixed bug where an AttributeError would be raised when using the
   file cache. [malthe]
 
